# LastFM-Browser

./: CMakeLists.txt  assign4.html  build.xml  media.json  readme.txt
cmake/Modules/: FindJsoncpp.cmake  LibFindMacros.cmake
src/sample/: Album.cpp  Album.hpp  MediaClientGui.cpp  MediaLibrary.cpp  MediaLibrary.hpp  MusicLibrary.cpp  MusicLibrary.hpp  Track.cpp  Track.hpp  samplemain.cpp
